--- a/results/simulated_data_result_figure.ipynb
+++ b/results/simulated_data_result_figure.ipynb
@@ -61,7 +61,7 @@
     }
    ],
    "source": [
-    "from model.utils import pca\n",
+    "from smart.utils import pca\n",
     "import muon.prot as pt\n",
     "import muon.atac as ac\n",
     "# RNA\n",
@@ -302,7 +302,7 @@
     "\n",
     "os.environ['R_HOME'] = '/public/home/cit_wlhuang/.conda/envs/smart/lib/R'\n",
     "\n",
-    "from model.utils import clustering\n",
+    "from smart.utils import clustering\n",
     "for i in ['MOFA+', 'MEFISTO']:\n",
     "    print(i)\n",
     "    for n in range(cluster1,cluster2):\n",
@@ -384,7 +384,7 @@
     "import os\n",
     "\n",
     "os.environ['R_HOME'] = '/home/ws6tg/anaconda3/envs/EnvR43/lib/R/'       \n",
-    "from model.utils import clustering\n",
+    "from smart.utils import clustering\n",
     "\n",
     "# for i in ['MISO']:\n",
     "#     print(i)\n",
@@ -806,7 +806,7 @@
     }
    ],
    "source": [
-    "from model.utils import getcolordict\n",
+    "from smart.utils import getcolordict\n",
     "#gs = gridspec.GridSpec(2, 16)\n",
     "fig, ax_list = plt.subplots(2, 6, figsize=(10, 3.7),dpi=200)\n",
     "plt.subplots_adjust(hspace=0.2, wspace=0.05)\n",
